fixed search bar alignment and total css

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@
   max-width: 500px;
   margin: 30px auto;
 }
+.footer {
+  margin-top: 10px;
+  font-size: 14px;
+}
+.footer a {
+  text-decoration: none;
+}
